--- a/web/app/themes/sskotz-v2/templates/base.twig
+++ b/web/app/themes/sskotz-v2/templates/base.twig
@@ -178,7 +178,7 @@
                                             <a class="sidenav-link" href="{{ site.link }}/news/" alt="Ir para pagina novidades">Novidades</a>
                                         </li>
                                         <li class="sidenav-item">
-                                            <a class="sidenav-link" href="{{ site.link }}/guides/" alt="Ir para pagina cosmos">Cosmos</a>
+                                            <a class="sidenav-link" href="{{ site.link }}/cosmos/" alt="Ir para pagina cosmos">Cosmos</a>
                                         </li>
                                         <li class="sidenav-item">
                                             <a class="sidenav-link" href="{{ site.link }}/characters/" alt="Ir para pagina cavaleiros">Cavaleiros</a>
