--- a/web/app/themes/sskotz-v2/templates/single-characters.twig
+++ b/web/app/themes/sskotz-v2/templates/single-characters.twig
@@ -278,6 +278,7 @@
 													</div>
 												</div>
 												<div class="col-9 col-sm-9 col-md-10 col-lg-10 col-xl-10">
+													
 													<div class="ch-skill-more-block">
 														<div class="ch-skill-name">
 															<h5>{{ skill.name }}</h5>
@@ -304,6 +305,7 @@
 											</div>
 										</div>
 										<div class="row">
+										<div class="ch-skill-rec">Level recomendado: {{ skill.skill_up }}</div>
 											<div class="col-12">
 												<div class="ch-skill-up">
 													<p>{{ skill.desc }}</p>
@@ -854,6 +856,7 @@
 											</div>
 										</div>
 										<div class="row">
+											<div class="ch-skill-rec">Level recomendado: {{ skill.skill_up }}</div>
 											<div class="col-12">
 												<div class="ch-skill-up">
 													<p>{{ skill.desc }}</p>
