--- a/web/app/themes/sskotz-v2/templates/single.twig
+++ b/web/app/themes/sskotz-v2/templates/single.twig
@@ -17,7 +17,7 @@
                         </div>
                     </div>
                     <h1 class="post-title text-center">{{ post.title }}</h1>
-                    <div class="col-12 mt-3 px-0">
+                    <div class="col-12 mt-3 px-0 text-center">
                         <img src="{{ post.thumbnail }}" class="img-fluid" alt="Imagems destaque da postagem {{ post.title }}" />
                     </div>
                 </header>
