--- a/web/app/themes/sskotz-v2/templates/base.twig
+++ b/web/app/themes/sskotz-v2/templates/base.twig
@@ -261,6 +261,14 @@
     <script type="application/javascript" src="{{ site.theme.link }}/assets/lib/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="{{ site.theme.link }}/assets/lib/popperjs/popper.min.js"></script>
     <script type="application/javascript" src="{{ site.theme.link }}/assets/js/main.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156151202-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-156151202-1');
+    </script>
 
     {% endblock %}
 
