--- a/web/app/themes/sskotz-v2/templates/base.twig
+++ b/web/app/themes/sskotz-v2/templates/base.twig
@@ -246,7 +246,7 @@
                         </li>
                     </ul>
                     <hr>
-                    <small>Este é um site feito de fã para fãs. O conteúdo introduzido no mesmo tem o objeito de ajudar os outros jogadores.</small><br>
+                    <small>Este é um site feito de fã para fãs. O conteúdo introduzido no mesmo tem o objetivo de ajudar os outros jogadores.</small><br>
                     <small>Copyright &copy; 1998 - 2020 Tencent. Todos os direitos reservados.</small>
                 </div>
             </footer>
