--- a/web/app/themes/sskotz-v2/templates/html-header.twig
+++ b/web/app/themes/sskotz-v2/templates/html-header.twig
@@ -7,7 +7,7 @@
 
   <head>
     <meta charset="{{ site.charset }}" />
-    <meta name="description" content="{{ site.description }}" />
+    <meta name="description" content="Site destinado a auxiliar jogadores de Saint Seiya Awakening com conteúdos como: Personagens, Cosmos, Guias e muito mais. " />
     <link rel="stylesheet"
       href="{{ site.theme.link }}/assets/css/style.css"
       type="text/css"
