--- a/web/app/themes/sskotz-v2/templates/index.twig
+++ b/web/app/themes/sskotz-v2/templates/index.twig
@@ -55,6 +55,7 @@
         </div>
     </div>
 </section>
+<!-- 
 <section class="py-4 last-characters parallex">
     <div class="container position-relative h-100">
         <div class="row h-100">
@@ -94,6 +95,21 @@
         </div>
     </div>
 </section>
+-->
+<div class="row">
+    <div class="container">
+        <div class="col-12">
+            <div class="mini divider">
+                <div class="sk-folding-cube">
+                    <div class="sk-cube1 sk-cube"></div>
+                    <div class="sk-cube2 sk-cube"></div>
+                    <div class="sk-cube4 sk-cube"></div>
+                    <div class="sk-cube3 sk-cube"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <section class="py-4 guide-session">
     <div class="container">
         <div class="row">
