--- a/web/app/themes/sskotz-v2/assets/css/archive.css
+++ b/web/app/themes/sskotz-v2/assets/css/archive.css
@@ -458,6 +458,10 @@
   background: #600e8f !important;
 }
 
+.post-card .post-card-info .qa-category {
+  background: #b08a20 !important;
+}
+
 .post-card .post-card-info h3 {
   font-size: 1.3rem;
   margin-bottom: 0.8rem;
