--- a/web/app/themes/sskotz-v2/assets/css/post.css
+++ b/web/app/themes/sskotz-v2/assets/css/post.css
@@ -59,6 +59,10 @@
   background: #1bc229 !important;
 }
 
+.post-byline .qa-tag {
+  background: #b08a20 !important;
+}
+
 .post-full-content {
   margin-top: 1rem;
   margin-bottom: 4rem;
