--- a/web/app/themes/sskotz-v2/templates/archive-news.twig
+++ b/web/app/themes/sskotz-v2/templates/archive-news.twig
@@ -41,6 +41,10 @@
 															"{% endif %}>
 								<a href="{{ site.link }}/news/communication">Comunicados</a>
 							</li>
+								<li {% if categorypage.slug == 'qa' %} class="active
+															 "{% endif %}>
+								<a href="{{ site.link }}/news/qa">Perguntas e Respostas</a>
+							</li>
 						</ul>
 					</div>
 				</div>
