--- a/web/app/themes/sskotz-v2/templates/base.twig
+++ b/web/app/themes/sskotz-v2/templates/base.twig
@@ -256,7 +256,7 @@
     </div>
 
     {% block script %}
-
+    <script data-ad-client="ca-pub-3138977769464912" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script type="application/javascript" src="{{ site.theme.link }}/assets/lib/jquery/jquery.min.js"></script>
     <script type="application/javascript" src="{{ site.theme.link }}/assets/lib/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="{{ site.theme.link }}/assets/lib/popperjs/popper.min.js"></script>
