--- a/web/app/themes/sskotz-v2/assets/css/post.css
+++ b/web/app/themes/sskotz-v2/assets/css/post.css
@@ -78,6 +78,7 @@
   margin-top: 1vw;
   padding: 3vw 0;
   border-top: 1px solid var(--font-color);
+  margin-bottom: 5rem;
 }
 
 .post-full-footer .content {
