--- a/web/app/themes/sskotz-v2/templates/archive-guides.twig
+++ b/web/app/themes/sskotz-v2/templates/archive-guides.twig
@@ -7,7 +7,7 @@
 	<section class="pt-4 pb-5">
 		<div class="container">
 			<div class="row">
-				<div class="col-12 mb-4 text-center">
+				<div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-6 text-center mb-4 mx-auto">
 					<h2 class="text-uppercase">Guias</h2>
 					<p class="mb-0">Guias destinados para auxiliar você a melhorar sua conta em Saint Seiya Awakening.
 					</p>
