--- a/web/app/themes/sskotz-v2/templates/archive-news.twig
+++ b/web/app/themes/sskotz-v2/templates/archive-news.twig
@@ -7,7 +7,7 @@
 	<section class="pt-4 pb-5">
 		<div class="container">
 			<div class="row">
-				<div class="col-12 mb-4 text-center">
+				<div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-6 text-center mb-4 mx-auto">
 					<h2 class="text-uppercase">Novidades</h2>
 					<p class="mb-0">Aqui você pode checar as novidades sobre Saint Seiya Awakening. Não deixe de ficar por dentro das notícias mais recentes!.
 					</p>
