--- a/web/app/themes/sskotz-v2/templates/author.twig
+++ b/web/app/themes/sskotz-v2/templates/author.twig
@@ -9,7 +9,7 @@
 			<div class="row author-header">
 				<div class="col-12 d-flex">
 					<div class="col-4 col-xl-2">
-						<img src='{{author.avatar}}' class="img-fluid rounded-circle" style="width:120px !important;height: 120px !important;">
+						<img src='{{author.avatar}}' class="rounded-circle" style="width:120px !important;height: 120px !important;">
 					</div>
 					<div class="col-6 col-xl-7 my-auto">
 						<div class="col-12 p-0">
