--- a/web/app/themes/sskotz-v2/templates/index.twig
+++ b/web/app/themes/sskotz-v2/templates/index.twig
@@ -5,7 +5,7 @@
 <section class="pt-4 pb-5">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 text-center mb-3">
+            <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-6 text-center mb-4 mx-auto">
                 <h2 class="text-uppercase">Últimas notícias</h2>
                 <p>Aqui você pode checar as novidades sobre Saint Seiya Awakening. Não deixe de ficar por dentro das notícias mais recentes.</p>
             </div>
@@ -113,7 +113,7 @@
 <section class="py-4 guide-session">
     <div class="container">
         <div class="row">
-            <div class="col-12 text-center mb-3">
+            <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-6 text-center mb-4 mx-auto">
                 <h2 class="text-uppercase">Guias</h2>
                 <p>Use esses guias para melhorar sua conta.</p>
             </div>
@@ -158,7 +158,7 @@
 <section class="py-4 members-session">
     <div class="container">
         <div class="row">
-            <div class="col-12 text-center mb-5">
+            <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-6 text-center mb-4 mx-auto">
                 <h2 class="text-uppercase">Nossa equipe</h2>
                 <p>Essa é a equipe responsável pela criação desse site. Cada um responsável por uma parte para criar esse site para o uso de todos.</p>
             </div>
