--- a/web/app/themes/sskotz-v2/templates/index.twig
+++ b/web/app/themes/sskotz-v2/templates/index.twig
@@ -114,12 +114,12 @@
 </div>
 <section class="py-4 guide-session">
         <div class="row">
-            <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-6 text-center mb-4 mx-auto">
-                <h2 class="text-uppercase">Últimas notícias</h2>
-                <p>Aqui você pode checar as novidades sobre Saint Seiya Awakening. Não deixe de ficar por dentro das notícias mais recentes.</p>
+             <div class="col-12 text-center mb-4 mx-auto">
+                <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-6 text-center mx-auto">
+                    <h2 class="text-uppercase">Últimas notícias</h2>
+                    <p>Aqui você pode checar as novidades sobre Saint Seiya Awakening. Não deixe de ficar por dentro das notícias mais recentes.</p>
+                </div>
             </div>
-        </div>
-        <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 py-2">
                 <div class="guide-item" onclick="window.location.href='{{site.url}}/guides/cosmos'">
                     <img src="{{ site.theme.link }}/assets/images/guide-cosmos.png" class="img-fluid" alt="Guia de cosmos" />
@@ -162,11 +162,11 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-6 text-center mb-4 mx-auto">
-                <h2 class="text-uppercase">Últimas notícias</h2>
-                <p>Aqui você pode checar as novidades sobre Saint Seiya Awakening. Não deixe de ficar por dentro das notícias mais recentes.</p>
-            </div>
+                <h2 class="text-uppercase">Nossa equipe</h2>
+                <p>Essa é a equipe responsável pela criação desse site. Cada um responsável por uma parte para criar esse site para o uso de todos.</p>
+             </div>
         </div>
-        <div class="row">
+         <div class="row">
             {% for member in team %}
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-2 mx-auto">
                 <div class="our-team">
