--- a/web/app/themes/sskotz-v2/templates/index.twig
+++ b/web/app/themes/sskotz-v2/templates/index.twig
@@ -113,6 +113,7 @@
     </div>
 </div>
 <section class="py-4 guide-session">
+    <div class="container">
         <div class="row">
              <div class="col-12 text-center mb-4 mx-auto">
                 <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-6 text-center mx-auto">
