--- a/web/app/themes/sskotz-v2/templates/author.twig
+++ b/web/app/themes/sskotz-v2/templates/author.twig
@@ -8,10 +8,10 @@
 		<div class="container">
 			<div class="row author-header">
 				<div class="col-12 d-flex">
-					<div class="col-4 col-xl-2">
+					<div class="col-12 col-sm-12 col-md-3 col-lg-2 col-xl-2 mr-md-5 mr-sm-5 mr-lg-0 mx-auto mx-md-0 text-center">
 						<img src='{{author.avatar}}' class="rounded-circle" style="width:120px !important;height: 120px !important;">
 					</div>
-					<div class="col-6 col-xl-7 my-auto">
+					<div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 my-auto mx-auto mx-md-0 text-center text-md-left">
 						<div class="col-12 p-0">
 							<h3>{{ author.name }}</h3>
 							<span>{{ author.role }}</span>
