--- a/public_html/app/themes/sskotz-v2/templates/index.twig
+++ b/public_html/app/themes/sskotz-v2/templates/index.twig
@@ -5,9 +5,11 @@
 <section class="pt-4 pb-5">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 text-center mb-4 mx-auto">
-                <h2 class="text-uppercase">Últimas notícias</h2>
-                <p>Aqui você pode checar as novidades sobre Saint Seiya Awakening. Não deixe de ficar por dentro das notícias mais recentes.</p>
+             <div class="col-12 text-center mb-4 mx-auto">
+                <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 text-center mx-auto">
+                    <h2 class="text-uppercase">Últimas notícias</h2>
+                    <p>Aqui você pode checar as novidades sobre Saint Seiya Awakening. Não deixe de ficar por dentro das notícias mais recentes.</p>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -117,8 +119,8 @@
         <div class="row">
              <div class="col-12 text-center mb-4 mx-auto">
                 <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 text-center mx-auto">
-                    <h2 class="text-uppercase">Últimas notícias</h2>
-                    <p>Aqui você pode checar as novidades sobre Saint Seiya Awakening. Não deixe de ficar por dentro das notícias mais recentes.</p>
+                    <h2 class="text-uppercase">Guias</h2>
+                    <p>Guias destinados para auxiliar você a melhorar sua conta em Saint Seiya Awakening.</p>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 py-2">
