--- a/public_html/app/themes/sskotz-v2/templates/archive-cosmos.twig
+++ b/public_html/app/themes/sskotz-v2/templates/archive-cosmos.twig
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="row mt-4 justify-content-center">
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <div class="input-group mb-3">
             <div class="input-group-prepend">
               <span class="input-group-text" id="label-namecosmo">
@@ -42,7 +42,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <div class="input-group mb-3">
             <div class="input-group-append">
               <label class="input-group-text" for="txtTypeCosmo">
