--- a/public_html/app/themes/sskotz-v2/templates/base.twig
+++ b/public_html/app/themes/sskotz-v2/templates/base.twig
@@ -178,6 +178,9 @@
                                             <a class="sidenav-link" href="{{ site.link }}/news/" alt="Ir para pagina novidades">Novidades</a>
                                         </li>
                                         <li class="sidenav-item">
+                                            <a class="sidenav-link" href="{{ site.link }}/cosmos/" alt="Ir para pagina cosmos">Guias</a>
+                                        </li>
+                                        <li class="sidenav-item">
                                             <a class="sidenav-link" href="{{ site.link }}/cosmos/" alt="Ir para pagina cosmos">Cosmos</a>
                                         </li>
                                         <li class="sidenav-item">
