--- a/public_html/app/themes/sskotz-v2/templates/base.twig
+++ b/public_html/app/themes/sskotz-v2/templates/base.twig
@@ -144,9 +144,9 @@
                                     <li class="nav-item">
                                         <a class="nav-link" href="{{ site.link }}/characters/" alt="Ir para pagina cavaleiros">Cavaleiros</a>
                                     </li>
-                                    <!--<li class="nav-item">
+                                    <li class="nav-item">
                                         <a class="nav-link" href="{{ site.link }}/contact/" alt="Ir para pagina contato">Contato</a>
-                                    </li>-->
+                                    </li>
                                 </ul>
                             </div>
                             <div class="sidenav closed" id="sidenav">
@@ -186,9 +186,9 @@
                                         <li class="sidenav-item">
                                             <a class="sidenav-link" href="{{ site.link }}/characters/" alt="Ir para pagina cavaleiros">Cavaleiros</a>
                                         </li>
-                                        <!--<li class="sidenav-item">
+                                        <li class="sidenav-item">
                                             <a class="sidenav-link" href="{{ site.link }}/contact/" alt="Ir para pagina contato">Contato</a>
-                                        </li>-->
+                                        </li>
                                     </ul>
                                 </div>
                                 <div class="sidenav-footer my-auto">
@@ -244,9 +244,9 @@
                         <li class="list-inline-item p-3">
                             <a href="#" alt="Ir para pagina cavaleiros">Cavaleiros</a>
                         </li>
-                        <!--<li class="list-inline-item p-3">
+                        <li class="list-inline-item p-3">
                             <a href="#" alt="Ir para pagina contato">Contato</a>
-                        </li>-->
+                        </li>
                     </ul>
                     <hr>
                     <small>Este é um site feito de fã para fãs. O conteúdo introduzido no mesmo tem o objetivo de ajudar os outros jogadores.</small><br>
