--- a/public_html/app/themes/sskotz-v2/templates/archive-cosmos.twig
+++ b/public_html/app/themes/sskotz-v2/templates/archive-cosmos.twig
@@ -169,6 +169,8 @@
                             Resistência á dano cósmico +10%
                           {% elseif cosmo.cosmo_bonus == 'rs' %}
                             Resistência a status +15%
+                          {% elseif cosmo.cosmo_bonus == 'as' %}
+                            Acerto de status +15%
                           {% elseif cosmo.cosmo_bonus == 'pf' %}
                             Perfuração física +100
                           {% endif %}
