--- a/public_html/app/themes/sskotz-v2/templates/index.twig
+++ b/public_html/app/themes/sskotz-v2/templates/index.twig
@@ -83,7 +83,7 @@
      <div class="row">
              <div class="col-12 text-center mb-4 mx-auto">
                 <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 text-center mx-auto">
-                    <h2 class="text-uppercase">Últimos vídeos de SamukaPLM"</h2>
+                    <h2 class="text-uppercase">Últimos vídeos de SamukaPLM</h2>
                     <p>Você pode encontrar nessa sessão os vídeos postados pelo youtuber SamukaPLM. Siga o canal para receber notícias sobre guias do jogo, sobre o torneio Jamiel e muito mais. Não deixem de acompanhar o canal, curtindo os vídeos e compartilhando-os para seus amigos.</p>
                 </div>
             </div>
