--- a/public_html/app/themes/sskotz-v2/templates/single-cosmos.twig
+++ b/public_html/app/themes/sskotz-v2/templates/single-cosmos.twig
@@ -94,6 +94,8 @@
                       Resistência á dano cósmico +10%
                     {% elseif post.cosmo_bonus == 'rs' %}
                       Resistência a status +15%
+                    {% elseif cosmo.cosmo_bonus == 'as' %}
+                      Acerto de status +15%
                     {% elseif post.cosmo_bonus == 'pf' %}
                       Perfuração física +100
                     {% endif %}
