--- a/public_html/app/themes/sskotz-v2/templates/single-cosmos.twig
+++ b/public_html/app/themes/sskotz-v2/templates/single-cosmos.twig
@@ -94,7 +94,7 @@
                       Resistência á dano cósmico +10%
                     {% elseif post.cosmo_bonus == 'rs' %}
                       Resistência a status +15%
-                    {% elseif cosmo.cosmo_bonus == 'as' %}
+                    {% elseif post.cosmo_bonus == 'as' %}
                       Acerto de status +15%
                     {% elseif post.cosmo_bonus == 'pf' %}
                       Perfuração física +100
