--- a/public_html/app/themes/sskotz-v2/templates/archive-cosmos.twig
+++ b/public_html/app/themes/sskotz-v2/templates/archive-cosmos.twig
@@ -2,7 +2,7 @@
 {% block head %}
   {{ parent() }}
   <link rel="stylesheet"
-    href="{{ site.theme.link }}//assets/css/archive.css"
+    href="{{ site.theme.link }}//assets/css/archive.css?v=1.2"
     type="text/css"
     media="screen" />
 {% endblock %}
