--- a/public_html/app/themes/sskotz-v2/templates/html-header.twig
+++ b/public_html/app/themes/sskotz-v2/templates/html-header.twig
@@ -35,5 +35,13 @@
     <link rel="author" href="{{ site.theme.link }}/humans.txt" />
     <link rel="pingback" href="{{ site.pingback_url }}" />
     <link rel="profile" href="http://gmpg.org/xfn/11" /> {{ function('wp_head') }}
+    <script data-ad-client="ca-pub-3138977769464912" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156151202-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-156151202-1');
+    </script>
   </head>
-</html>
