--- a/public_html/app/themes/sskotz-v2/templates/base.twig
+++ b/public_html/app/themes/sskotz-v2/templates/base.twig
@@ -230,22 +230,22 @@
                 <div class="container text-center">
                     <ul class="list-inline">
                         <li class="list-inline-item p-3">
-                            <a href="#" alt="Ir para pagina inicial">Início</a>
+                            <a href="{{ site.link }}" alt="Ir para pagina inicial">Início</a>
                         </li>
                         <li class="list-inline-item p-3">
-                            <a href="#" alt="Ir para pagina guias">Guias</a>
+                            <a href="{{ site.link }}/news/" alt="Ir para pagina novidades">Novidades</a>
                         </li>
                         <li class="list-inline-item p-3">
-                            <a href="#" alt="Ir para pagina novidades">Novidades</a>
+                            <a href="{{ site.link }}/guides/" alt="Ir para pagina guias">Guias</a>
                         </li>
                         <li class="list-inline-item p-3">
-                            <a href="#" alt="Ir para pagina cosmos">Cosmos</a>
+                            <a href="{{ site.link }}/cosmos/" alt="Ir para pagina cosmos">Cosmos</a>
                         </li>
                         <li class="list-inline-item p-3">
-                            <a href="#" alt="Ir para pagina cavaleiros">Cavaleiros</a>
+                            <a href="{{ site.link }}/characters/" alt="Ir para pagina cavaleiros">Cavaleiros</a>
                         </li>
                         <li class="list-inline-item p-3">
-                            <a href="#" alt="Ir para pagina contato">Contato</a>
+                            <a href="{{ site.link }}/contact/" alt="Ir para pagina contato">Contato</a>
                         </li>
                     </ul>
                     <hr>
