--- a/public_html/app/themes/sskotz-v2/templates/archive-characters.twig
+++ b/public_html/app/themes/sskotz-v2/templates/archive-characters.twig
@@ -1,7 +1,7 @@
 {% extends "base.twig" %}
 {% block head %}
 	{{ parent() }}
-	<link rel="stylesheet" href="{{ site.theme.link }}//assets/css/archive.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="{{ site.theme.link }}//assets/css/archive.css?v=1.2" type="text/css" media="screen"/>
 {% endblock %}
 {% block content %}
 	<section class="saints section py-5">
