--- a/public_html/app/themes/sskotz-v2/templates/single-characters.twig
+++ b/public_html/app/themes/sskotz-v2/templates/single-characters.twig
@@ -1,7 +1,7 @@
 {% extends "base.twig" %}
 {% block head %}
 	{{ parent() }}
-	<link rel="stylesheet" href="{{ site.theme.link }}/assets/css/single-characters.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="{{ site.theme.link }}/assets/css/single-characters.css?v=1.3" type="text/css" media="screen"/>
 {% endblock %}
 
 {% block content %}
