--- a/public_html/app/themes/sskotz-v2/templates/html-header.twig
+++ b/public_html/app/themes/sskotz-v2/templates/html-header.twig
@@ -25,6 +25,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel=preload>
     <link rel="apple-touch-icon" sizes="180x180" href="{{ site.theme.link }}/assets/images/apple-touch-icon.webp">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ site.theme.link }}/assets/images/favicon-32x32.webp">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ site.theme.link }}/assets/images/favicon-16x16.webp">
