--- a/public_html/app/themes/sskotz-v2/assets/css/style.css
+++ b/public_html/app/themes/sskotz-v2/assets/css/style.css
@@ -4,7 +4,7 @@
  * Author: Upstatement and YOU!
 */
 
-@import url('/app/themes/sskotz-v2/assets/fonts/fontawesome/css/all.min.css');
+@import url('https://pro.fontawesome.com/releases/v5.10.0/css/all.css');
 @import url('https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800&display=swap');
 :root {
   --primary-color: #f5b453;
