--- a/public_html/app/themes/sskotz-v2/templates/index.twig
+++ b/public_html/app/themes/sskotz-v2/templates/index.twig
@@ -1,6 +1,5 @@
 {% extends "base.twig" %} {% block head %} {{ parent() }}
-<link rel="stylesheet" href="{{ site.theme.link }}/assets/css/slick/slick.css?v=1.1" type="text/css" media="screen" />
-<link rel="stylesheet" href="{{ site.theme.link }}/assets/css/slick/slick-theme.css?v=1.1" type="text/css" media="screen" />
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 <link rel="stylesheet" href="{{ site.theme.link }}/assets/css/index.css?v=1.3" type="text/css" media="screen" /> {% endblock %} {% block content %}
 <section class="pt-4 pb-5">
     <div class="container">
@@ -242,7 +241,7 @@
     </div>
 </section>
 {% endblock %} {% block script %} {{ parent() }}
-<script type="application/javascript" src="{{ site.theme.link }}/assets/js/slick/slick.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script type="application/javascript">
     $(document).ready(function() {
         $('.slider-characters').slick({
