--- a/public_html/app/themes/sskotz-v2/templates/index.twig
+++ b/public_html/app/themes/sskotz-v2/templates/index.twig
@@ -1,5 +1,5 @@
 {% extends "base.twig" %} {% block head %} {{ parent() }}
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css?v=2.0"/>
 <link rel="stylesheet" href="{{ site.theme.link }}/assets/css/index.css?v=1.3" type="text/css" media="screen" /> {% endblock %} {% block content %}
 <section class="pt-4 pb-5">
     <div class="container">
@@ -241,7 +241,7 @@
     </div>
 </section>
 {% endblock %} {% block script %} {{ parent() }}
-<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js?v=2.0"></script>
 <script type="application/javascript">
     $(document).ready(function() {
         $('.slider-characters').slick({
@@ -276,6 +276,7 @@
             nextArrow: '<button class="a-right control-c next arrow-next"></button>'
         });
         $('#main-channel-videos').slick({
+            lazyLoad: 'ondemand',
             centerMode: true,
             centerPadding: '60px',
             slidesToShow: 3,
