--- a/public_html/app/themes/sskotz-v2/templates/single-cosmos.twig
+++ b/public_html/app/themes/sskotz-v2/templates/single-cosmos.twig
@@ -2,7 +2,7 @@
 {% block head %}
   {{ parent() }}
   <link rel="stylesheet"
-    href="{{ site.theme.link }}/assets/css/single-cosmos?v=1.2.css"
+    href="{{ site.theme.link }}/assets/css/single-cosmos.css?v=1.2"
     type="text/css"
     media="screen" />
 {% endblock %}
