--- a/public_html/app/themes/sskotz-v2/templates/single-characters.twig
+++ b/public_html/app/themes/sskotz-v2/templates/single-characters.twig
@@ -362,13 +362,13 @@
 													<div class="ch-skill-comb mt-4">
 														<ul class="ch-skill-comb-list">
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.png">
 															</li>
 														</ul>
 													</div>
@@ -403,13 +403,13 @@
 													<div class="ch-skill-comb mt-4">
 														<ul class="ch-skill-comb-list">
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.png">
 															</li>
 														</ul>
 													</div>
@@ -439,18 +439,18 @@
 											<div class="col-9 col-sm-9 col-md-10 col-lg-10 col-xl-10">
 												<div class="ch-skill-more-block">
 													<div class="ch-skill-name">
-														<h5>Maré - Casco</h5>
+														<h5>Maré - Concha</h5>
 													</div>
 													<div class="ch-skill-comb mt-4">
 														<ul class="ch-skill-comb-list">
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.png">
 															</li>
 														</ul>
 													</div>
@@ -488,13 +488,13 @@
 													<div class="ch-skill-comb mt-4">
 														<ul class="ch-skill-comb-list">
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.png">
 															</li>
 														</ul>
 													</div>
@@ -529,13 +529,13 @@
 													<div class="ch-skill-comb mt-4">
 														<ul class="ch-skill-comb-list">
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.png">
 															</li>
 														</ul>
 													</div>
@@ -570,13 +570,13 @@
 													<div class="ch-skill-comb mt-4">
 														<ul class="ch-skill-comb-list">
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.png">
 															</li>
 														</ul>
 													</div>
@@ -614,13 +614,13 @@
 													<div class="ch-skill-comb mt-4">
 														<ul class="ch-skill-comb-list">
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.png">
 															</li>
 														</ul>
 													</div>
@@ -650,18 +650,18 @@
 											<div class="col-9 col-sm-9 col-md-10 col-lg-10 col-xl-10">
 												<div class="ch-skill-more-block">
 													<div class="ch-skill-name">
-														<h5>Nuvem Estrondosa - Relâmpago</h5>
+														<h5>Nuvem Estrondosa - Relâmpago Partido</h5>
 													</div>
 													<div class="ch-skill-comb mt-4">
 														<ul class="ch-skill-comb-list">
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.png">
 															</li>
 														</ul>
 													</div>
@@ -691,18 +691,18 @@
 											<div class="col-9 col-sm-9 col-md-10 col-lg-10 col-xl-10">
 												<div class="ch-skill-more-block">
 													<div class="ch-skill-name">
-														<h5>Nuvem Estrondosa - Tempestade de gelo</h5>
+														<h5>Nuvem Estrondosa - Nevasca</h5>
 													</div>
 													<div class="ch-skill-comb mt-4">
 														<ul class="ch-skill-comb-list">
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.png">
 															</li>
 														</ul>
 													</div>
@@ -740,13 +740,13 @@
 													<div class="ch-skill-comb mt-4">
 														<ul class="ch-skill-comb-list">
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon1.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon2.png">
 															</li>
 															<li>
-																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.webp">
+																<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidon3.png">
 															</li>
 														</ul>
 													</div>
