--- a/public_html/app/themes/sskotz-v2/templates/single-characters.twig
+++ b/public_html/app/themes/sskotz-v2/templates/single-characters.twig
@@ -348,7 +348,7 @@
 										<div class="ch-skill-details w-100">
 											<div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
 												<div class="ch-skill-img-block">
-													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb1.webp" class="ch-skill-img">
+													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb1.png" class="ch-skill-img">
 													<div class="ch-skill-cost">
 														<span class="text-white font-stroke text-center">0</span>
 													</div>
@@ -389,7 +389,7 @@
 										<div class="ch-skill-details w-100">
 											<div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
 												<div class="ch-skill-img-block">
-													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb2.webp" class="ch-skill-img">
+													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb2.png" class="ch-skill-img">
 													<div class="ch-skill-cost">
 														<span class="text-white font-stroke text-center">0</span>
 													</div>
@@ -430,7 +430,7 @@
 										<div class="ch-skill-details w-100">
 											<div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
 												<div class="ch-skill-img-block">
-													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb3.webp" class="ch-skill-img">
+													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb3.png" class="ch-skill-img">
 													<div class="ch-skill-cost">
 														<span class="text-white font-stroke text-center">0</span>
 													</div>
@@ -474,7 +474,7 @@
 										<div class="ch-skill-details w-100">
 											<div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
 												<div class="ch-skill-img-block">
-													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb4.webp" class="ch-skill-img">
+													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb4.png" class="ch-skill-img">
 													<div class="ch-skill-cost">
 														<span class="text-white font-stroke text-center">0</span>
 													</div>
@@ -515,7 +515,7 @@
 										<div class="ch-skill-details w-100">
 											<div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
 												<div class="ch-skill-img-block">
-													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb5.webp" class="ch-skill-img">
+													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb5.png" class="ch-skill-img">
 													<div class="ch-skill-cost">
 														<span class="text-white font-stroke text-center">1</span>
 													</div>
@@ -556,7 +556,7 @@
 										<div class="ch-skill-details w-100">
 											<div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
 												<div class="ch-skill-img-block">
-													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb6.webp" class="ch-skill-img">
+													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb6.png" class="ch-skill-img">
 													<div class="ch-skill-cost">
 														<span class="text-white font-stroke text-center">1</span>
 													</div>
@@ -600,7 +600,7 @@
 										<div class="ch-skill-details w-100">
 											<div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
 												<div class="ch-skill-img-block">
-													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb7.webp" class="ch-skill-img">
+													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb7.png" class="ch-skill-img">
 													<div class="ch-skill-cost">
 														<span class="text-white font-stroke text-center">0</span>
 													</div>
@@ -641,7 +641,7 @@
 										<div class="ch-skill-details w-100">
 											<div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
 												<div class="ch-skill-img-block">
-													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb8.webp" class="ch-skill-img">
+													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb8.png" class="ch-skill-img">
 													<div class="ch-skill-cost">
 														<span class="text-white font-stroke text-center">2</span>
 													</div>
@@ -682,7 +682,7 @@
 										<div class="ch-skill-details w-100">
 											<div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
 												<div class="ch-skill-img-block">
-													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb9.webp" class="ch-skill-img">
+													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb9.png" class="ch-skill-img">
 													<div class="ch-skill-cost">
 														<span class="text-white font-stroke text-center">2</span>
 													</div>
@@ -726,7 +726,7 @@
 										<div class="ch-skill-details w-100">
 											<div class="col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
 												<div class="ch-skill-img-block">
-													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb10.webp" class="ch-skill-img">
+													<img src="{{ site.link }}/app/uploads/2020/04/skill_poseidoncomb10.png" class="ch-skill-img">
 													<div class="ch-skill-cost">
 														<span class="text-white font-stroke text-center">0</span>
 													</div>
