--- a/public_html/app/themes/sskotz-v2/templates/html-header.twig
+++ b/public_html/app/themes/sskotz-v2/templates/html-header.twig
@@ -37,11 +37,11 @@
     <link rel="profile" href="http://gmpg.org/xfn/11" /> {{ function('wp_head') }}
     <!-- <script data-ad-client="ca-pub-3138977769464912" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156151202-1"></script>
-    <!--<script>
+    <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'UA-156151202-1');
-    </script>-->
+    </script>
   </head>
