--- a/public_html/app/themes/sskotz-v2/templates/html-header.twig
+++ b/public_html/app/themes/sskotz-v2/templates/html-header.twig
@@ -18,7 +18,7 @@
       media="screen" />
     <meta name="keywords"
       content="Saint seiya awakening, sskotz, saint seiya mobile, saint seiya tencent, saint seiya tips, saint seiya mobile, saint seiya online, saint seiya db, saint seiya guides, cavaleiros do zodiaco mobile, cavaleiros do zodiaco, cavaleiros do zodiaco tencent" />
-    <meta name="robots" content="" />
+    <meta name="robots" content="noindex,follow" />
     <meta name="revisit-after" content="1 day" />
     <meta name="language" content="Portuguese" />
     <meta name="generator" content="N/A" />
