--- a/public_html/app/themes/sskotz-v2/assets/css/index.css
+++ b/public_html/app/themes/sskotz-v2/assets/css/index.css
@@ -512,7 +512,7 @@ main .parallex {
   }
   .post-spotlight {
     height: 350px !important;
-    width: 100% !important;
+    width: 100% !important
   }
   .icharacter .character-info {
     left: 0;
