--- a/public_html/app/themes/sskotz-v2/templates/index.twig
+++ b/public_html/app/themes/sskotz-v2/templates/index.twig
@@ -1,7 +1,7 @@
 {% extends "base.twig" %} {% block head %} {{ parent() }}
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css?v=2.0"/>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css?v=2.0"/>
-<link rel="stylesheet" href="{{ site.theme.link }}/assets/css/index.css?v=1.3" type="text/css" media="screen" /> {% endblock %} {% block content %}
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css?v=2."/>
+<link rel="stylesheet" href="{{ site.theme.link }}/assets/css/index.css?v=1.4" type="text/css" media="screen" /> {% endblock %} {% block content %}
 <section class="pt-4 pb-5">
     <div class="container">
         <div class="row">
