--- a/public_html/app/themes/sskotz-v2/templates/index.twig
+++ b/public_html/app/themes/sskotz-v2/templates/index.twig
@@ -59,7 +59,7 @@
         </div>
         <div class="row mt-3">
             <div class="col-12 m-auto text-center">
-                <button type="button" class="col-2 btn-showmore" onclick="window.location.href = '{{ site.link }}/news/'">Ver mais</button>
+                <button type="button" class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3 btn-showmore" onclick="window.location.href = '{{ site.link }}/news/'">Ver mais</button>
             </div>
         </div>
     </div>
