--- a/public_html/app/themes/sskotz-v2/templates/archive-cosmos.twig
+++ b/public_html/app/themes/sskotz-v2/templates/archive-cosmos.twig
@@ -173,6 +173,8 @@
                             Acerto de status +15%
                           {% elseif cosmo.cosmo_bonus == 'pf' %}
                             Perfuração física +100
+                          {% elseif post.cosmo_bonus == 'ec' %}
+                            Efeito de crítico físico +5%
                           {% endif %}
                         </span>
                       {% endif %}
@@ -278,6 +280,8 @@
                             Acerto de status +15%
                           {% elseif cosmo.cosmo_bonus == 'pf' %}
                             Perfuração física +100
+                          {% elseif post.cosmo_bonus == 'ec' %}
+                            Efeito de crítico físico +5%
                           {% endif %}
                         </span>
                       {% endif %}
@@ -383,6 +387,8 @@
                             Acerto de status +15%
                           {% elseif cosmo.cosmo_bonus == 'pf' %}
                             Perfuração física +100
+                          {% elseif post.cosmo_bonus == 'ec' %}
+                            Efeito de crítico físico +5%
                           {% endif %}
                         </span>
                       {% endif %}
@@ -488,6 +494,8 @@
                             Acerto de status +15%
                           {% elseif cosmo.cosmo_bonus == 'pf' %}
                             Perfuração física +100
+                          {% elseif post.cosmo_bonus == 'ec' %}
+                            Efeito de crítico físico +5%
                           {% endif %}
                         </span>
                       {% endif %}
