--- a/public_html/app/themes/sskotz-v2/templates/single-cosmos.twig
+++ b/public_html/app/themes/sskotz-v2/templates/single-cosmos.twig
@@ -98,6 +98,8 @@
                       Acerto de status +15%
                     {% elseif post.cosmo_bonus == 'pf' %}
                       Perfuração física +100
+                    {% elseif post.cosmo_bonus == 'ec' %}
+                      Efeito de crítico físico +5%
                     {% endif %}
                   </span>
                 {% endif %}
